--- a/force-app/main/default/aura/MCFD_Autism_Navigation/MCFD_Autism_Navigation.cmp
+++ b/force-app/main/default/aura/MCFD_Autism_Navigation/MCFD_Autism_Navigation.cmp
@@ -40,4 +40,8 @@ Laura Perry			March 21st 2017      Created component as per client request for e
 		</div>
 	</div>
 </div>
+<!--
+Test Demo
+
+-->
 </aura:component>
